[package]
name = "tracer"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
probe-rs = { path = "../../probe-rs/probe-rs" }
anyhow = "*"
serde = "*"
pretty_env_logger = "*"
serde_json = "*"
svd-parser = "*"
log = "*"
lazy_static = "*"